Fix a styling bug in Firefox
The underline under the tabs shifted too much into the content area,
presumably because Firefox interprets it slightly different than
Chrome.

--- a/resources/skins.mirage.styles/common.less
+++ b/resources/skins.mirage.styles/common.less
@@ -350,6 +350,7 @@ footer.mw-footer {
 		font-weight: @font-weight-bold;
 		box-shadow: inset 0 0 0 0 @color-progressive;
 		transition: color 100ms, box-shadow 100ms;
+		display: inline-block;
 
 		&:hover,
 		&:focus {
@@ -367,7 +368,7 @@ footer.mw-footer {
 	}
 
 	li {
-		margin: 0.25rem;
+		margin: 0 0.25rem;
 	}
 }
 
